# LearnSDLGPU

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/shaders/compiled/dxil/: basic.frag.dxil  basic.vert.dxil
assets/shaders/compiled/msl/: basic.frag.msl  basic.vert.msl
assets/shaders/compiled/spirv/: basic.frag.spv  basic.vert.spv
assets/shaders/sources/: basic.hlsl.frag  basic.hlsl.vert
lib/shadercross/: shadercross
src/: main.c
src/core/: memory.c  memory.h  model.c  model.h  shader.c  shader.h  texture_manager.c  texture_manager.h  util.c  util.h
